# PinShot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  about.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: kiro-cli.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/pinshot-core/: Cargo.toml
crates/pinshot-core/src/: capture.rs  color.rs  crop.rs  encode.rs  geometry.rs  history.rs  lib.rs  naming.rs  pin.rs  selection.rs  settings.rs
crates/pinshot-core/src/annotation/: effects.rs  geometry.rs  mod.rs  render.rs  step.rs  text.rs
crates/pinshot-core/src/smart/: mod.rs  qr.rs
scripts/: dev-run.sh  gen-icon.mjs
specs/001-github-cicd/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-github-cicd/checklists/: requirements.md
specs/002-capture-to-output/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-capture-to-output/checklists/: requirements.md
specs/002-capture-to-output/contracts/: capture-ipc.md
specs/003-adjustable-selection-and-pin/: plan.md  spec.md  tasks.md
specs/003-adjustable-selection-and-pin/contracts/: pin-ipc.md
specs/004-floating-annotation-editor/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/004-floating-annotation-editor/checklists/: requirements.md
specs/004-floating-annotation-editor/contracts/: app-shell-ipc.md  editor-ipc.md  smart-tools-ipc.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: external.rs  lib.rs  main.rs
src-tauri/src/capture/: macos_capturer.rs  mod.rs  output.rs  overlay.rs  pin.rs  preview.rs  xcap_capturer.rs
src-tauri/src/editor/: export.rs  mod.rs  window.rs
ui/: editor.html  eslint.config.js  index.html  overlay.html  package-lock.json  package.json  pin.html  preview.html  settings.html  tsconfig.json  vite.config.ts
ui/src/: main.ts  overlay.ts  pin.ts  preview.ts  settings.ts
ui/src/editor/: actionbar.ts  canvas.ts  editor.ts  toolbar.ts  types.ts
