[workspace]
resolver = "2"
members = ["crates/pinshot-core", "src-tauri"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Greek-Cp/PinShot"
authors = ["PinShot contributors"]

# Lints applied workspace-wide so style is tool-enforced, not debated in review
# (Constitution VI). Crates opt in via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
