[package]
name = "pinshot"
description = "PinShot — offline screenshot & pin tool. Tauri shell."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "pinshot"

[lib]
name = "pinshot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pinshot"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pinshot-core = { path = "../crates/pinshot-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
