[package]
name = "pinshot"
description = "PinShot — offline screenshot & pin tool. Tauri shell."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "pinshot"

[lib]
name = "pinshot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "pinshot"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pinshot-core = { path = "../crates/pinshot-core" }
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9.6"
arboard = "3.6.1"
dirs = "6.0.0"
tauri-plugin-global-shortcut = { version = "2.3.2", default-features = false }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
base64 = "0.22.1"
