[package]
name = "pinshot-core"
description = "PinShot domain core: capture geometry, image ops, and platform-adapter ports. No GUI, no network."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
