[package]
name = "pinshot-core"
description = "PinShot domain core: capture geometry, image ops, and platform-adapter ports. No GUI, no network."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
rqrr = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
qrcode = { version = "0.14", default-features = false }
